--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
     "express": "^4.18.2",
     "mongoose": "^7.6.1",
     "nodemon": "^3.0.1"
+  },
+  "scripts": {
+"start": "nodemon index.js"
   }
+
+  
 }
